if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
add_subdirectory(ForallToGpu)
add_subdirectory(ParallelLoopsToGpuFPGA)
endif()
if(ENABLE_FPGA_TARGET)
add_subdirectory(GpuToOCLSPIRV)
add_subdirectory(GpuHostToMCLRT)
endif()
if(ENABLE_GPU_TARGET)
add_subdirectory(GpuToTriton)
add_subdirectory(GpuToBlockedGpu)
add_subdirectory(BlockedGpuToTriton)
add_subdirectory(TritonToCuda)
add_subdirectory(TritonToHIP)
add_subdirectory(PrepareGpuHost)
endif()
set(LLVM_TARGET_DEFINITIONS Passes.td)
mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
mlir_tablegen(Passes.capi.h.inc -gen-pass-capi-header --prefix Conversion)
mlir_tablegen(Passes.capi.cpp.inc -gen-pass-capi-impl --prefix Conversion)
add_public_tablegen_target(COMETConversionPassIncGen)
