[package]
name = "comet-rs-impl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
regex = "1.3"
syn = { version = "1.0", features = ["full","extra-traits","visit-mut"] }
rand = "0.8.0"
itertools = "0.10"

[features]
comet_errors_as_warnings=[]


