[package]
name = "comet-rs-impl"
version = "0.1.1-rc1"
authors = ["Ryan D. Friese <ryan.friese@pnnl.gov>", "Gokcen Kestor <gokcen.kestor@pnnl.gov>"]
edition = "2021"
description = "Rust eDSL for COMET: domain specific COMpiler for Extreme Targets"
readme = "README.md"
repository = "https://github.com/pnnl/COMET/tree/master/frontends/rust/comet-rs"
homepage = "https://github.com/pnnl/COMET"
license-file = "LICENSE"
keywords = ["heterogeneous", "mlir", "compiler", "dsl", "COMET"]
categories = ["compilers","hardware-support","science"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
regex = "1.3"
syn = { version = "1.0", features = ["full","extra-traits","visit-mut"] }
rand = "0.8.0"
itertools = "0.10"

[features]
comet_errors_as_warnings=[]


